optimize wasm build

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           height: 100%;
       }
     </style>
-    <title>Wasm Example</title>
+    <title>Dessins géométriques et artistiques</title>
   </head>
   <script type="module">
     import init from './dessins.js'
