--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html lang="en">
   <head>
+    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="icon" href="/favicon.ico" sizes="any">
     <meta charset="UTF-8" />
     <style>
       body {
